Java 21 cleanup: pattern matching, getDeclaredConstructor, mockito bump
- Replace instanceof+cast patterns with Java 16 pattern matching
  in QAdvancer, MasterController, QDataXMLReader, QDataYAMLWriter
- Replace deprecated Class.newInstance() with
  getDeclaredConstructor().newInstance() in PatchChanger
- Bump mockito-core from 2.28.2 to 5.14.2 for Java 21 compatibility
- Update Eclipse JDT compiler settings to Java 21